kubernetes/Manifest.yml
apiVersion: v1
kind: Namespace
metadata:
    name: pcs-library-dev-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pcs-library-dev-depl
    namespace: pcs-library-dev-ns
spec:
    replicas: 1
    selector:
        matchLabels:
            app: pcs-library-app
    template:
        metadata:
            labels:
                app: pcs-library-app
        spec:
            nodeSelector:
                "beta.kubernetes.io/os": linux
            volumes:
            - name: secrets
              secret: 
                secretName: env-secrets
            containers:
            - name: pcs-library-cnr
              image: procosys.azurecr.io/library/api:latest
              volumeMounts:
                - name: secrets
                  mountPath: "/app/secrets"
              resources:
                requests:
                    cpu: 100m
                    memory: 128Mi
                limits:
                    cpu: 250m
                    memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
    name: pcs-library-svc
    namespace: pcs-library-dev-ns
spec:
    ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
    selector:
        app: pcs-library-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: pcs-library-ingress
    namespace: pcs-library-dev-ns
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$2
        cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
    tls:
    - hosts:
      - pcs-dev.net
      secretName: pcs-dev.net-tls
    rules:
    - host: pcs-dev.net
      http:
        paths:
        - backend:
            serviceName: pcs-library-svc
            servicePort: 80
          path: /library(/|$)(.*)
